# mocap4ros2_core

./: README.md
.github/workflows/: master.yaml
config/: mocap_imu_params.yaml
mocap_camera_composer/: CMakeLists.txt  package.xml
mocap_camera_composer/include/mocap_camera_composer/: mocap_camera_composer.hpp
mocap_camera_composer/src/: mocap_camera_composer.cpp
mocap_control/: CMakeLists.txt  README.md  package.xml
mocap_control/include/mocap_control/: ControlledLifecycleNode.hpp  ControlledNode.hpp  ControllerNode.hpp
mocap_control/mocap_control/: package.xml
mocap_control/mocap_control/include/mocap_control/: ControllerNode.hpp
mocap_control/mocap_control/src/mocap_control/: ControlledLifecycleNode.cpp  ControllerNode.cpp
mocap_control/mocap_control/test/: test_control.cpp
mocap_control/mocap_control_msgs/: mocap_control_bridge_mapping_rule.yaml  package.xml
mocap_control/mocap_control_msgs/msg/: MocapInfo.msg
mocap_control/src/mocap_control/: ControlledLifecycleNode.cpp  ControlledNode.cpp  ControllerNode.cpp
mocap_control/test/: test_control.cpp
mocap_control_msgs/: CMakeLists.txt  README.md  package.xml
mocap_control_msgs/msg/: Control.msg  MocapInfo.msg
mocap_imu_composer/: CMakeLists.txt  package.xml
mocap_imu_composer/include/mocap_imu_composer/: mocap_imu_composer.hpp
mocap_imu_composer/src/: mocap_imu_composer.cpp
