<package format="2">
  <name>mocap_imu_composer</name>
  <version>0.0.1</version>
  <description>
     Node that process the ros2 imu_driver.
  </description>
  <author>Lorena Bajo</author>
  <maintainer email="lorena.bajo@urjc.es">Lorena Bajo</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/vicon_bridge</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_export_depend>rclcpp</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>